bundled_metadata/force-app/main/default/objects/Development_Task_Configuration__mdt/Development_Task_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Development Task Configuration</label>
    <pluralLabel>Development Tasks Configuration</pluralLabel>
</CustomObject>