bundled_metadata/force-app/main/default/objects/Development_Task_Configuration__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWAY FROM HOME</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTOR</fullName>
            </value>
            <value>
                <fullName>E-COMMERCE</fullName>
            </value>
            <value>
                <fullName>LARGE FORMAT</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>SMALL FORMAT</fullName>
            </value>
            <value>
                <fullName>TRADITIONAL TRADE</fullName>
            </value>
            <value>
                <fullName>WHOLESALE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>