bundled_metadata/force-app/main/default/objects/Development_Task_Configuration__mdt/fields/Development_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Development_Task_Type__c</fullName>
    <label>Development Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G16_LV_S</fullName>
                <label>Competitor Products in Store</label>
            </value>
            <value>
                <fullName>P41_LV_S</fullName>
                <label>Number of Displays(P41_LV_S)</label>
            </value>
            <value>
                <fullName>P2_L12W_S_B</fullName>
                <label>Missing MSL Distributed(P2_L12W_S_B)</label>
            </value>
            <value>
                <fullName>O11_LV_S</fullName>
                <label>Branded POS</label>
            </value>
            <value>
                <fullName>O12_LV_S</fullName>
                <label>Combo Execution</label>
            </value>
            <value>
                <fullName>P53_LV_S_F</fullName>
                <label>Main PoG Compliance(P53_LV_S_F)</label>
            </value>
            <value>
                <fullName>P30_LV_S_F</fullName>
                <label>Main Space Share(P30_LV_S_F)</label>
            </value>
            <value>
                <fullName>O03_LV_S</fullName>
                <label>Menu Visibility</label>
            </value>
            <value>
                <fullName>O10_LV_S</fullName>
                <label>Digital Platform Visibility</label>
            </value>
            <value>
                <fullName>P56_LV_S_B</fullName>
                <label>Secondary Space Compliance (Manual Audit or IR)(P56_LV_S_B)</label>
            </value>
            <value>
                <fullName>P42_LV_S</fullName>
                <label>Number of Displays(P42_LV_S)</label>
            </value>
            <value>
                <fullName>P53_LV_S_B</fullName>
                <label>Main PoG Compliance(P53_LV_S_B)</label>
            </value>
            <value>
                <fullName>P30_LV_S_B</fullName>
                <label>Main Space Share(P30_LV_S_B)</label>
            </value>
            <value>
                <fullName>P56_LV_S_F</fullName>
                <label>Secondary Space Compliance (Manual Audit or IR)(P56_LV_S_F)</label>
            </value>
            <value>
                <fullName>P2_L12W_S_F</fullName>
                <label>Missing MSL Distributed(P2_L12W_S_F)</label>
            </value>
            <value>
                <fullName>P2_LV_S_B</fullName>
                <label>Missing MSL Distributed(P2_LV_S_B)</label>
            </value>
            <value>
                <fullName>P2_LV_S_F</fullName>
                <label>Missing MSL Distributed(P2_LV_S_F)</label>
            </value>
            <value>
                <fullName>P3_LV_S</fullName>
                <label>CDA Distribution(P3_LV_S)</label>
            </value>
            <value>
                <fullName>P32_LV_S_B</fullName>
                <label>Total Space Share Beverages(P32_LV_S_B)</label>
            </value>
            <value>
                <fullName>P32_LV_S_F</fullName>
                <label>Total Space Share Foods(P32_LV_S_F)</label>
            </value>
            <value>
                <fullName>G_07</fullName>
                <isActive>false</isActive>
                <label>Competitor Products in Cooler</label>
            </value>
            <value>
                <fullName>P_08</fullName>
                <isActive>false</isActive>
                <label>Cooler Removal</label>
            </value>
            <value>
                <fullName>P_13</fullName>
                <isActive>false</isActive>
                <label>Main Space Share – Segment</label>
            </value>
            <value>
                <fullName>P_09</fullName>
                <isActive>false</isActive>
                <label>Make Profitable Cooler</label>
            </value>
            <value>
                <fullName>P_05</fullName>
                <isActive>false</isActive>
                <label>Missing MSL Available</label>
            </value>
            <value>
                <fullName>P_36</fullName>
                <isActive>false</isActive>
                <label>Secondary Space Compliance – Segment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>